# poetry-fastapi-docker

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
