[build-system]
requires = ["poetry>=1.7.1"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "src"
version = "0.1.0"
description = "Minimal Poetry example with Docker Multi-Stage builds"
authors = ["Michael Oliver <mo175@live.com>", "svx <sven@leftxs.org>"]
maintainers = ["Greg Dabrowski <gregory.dabrowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.0"

fastapi = "^0.104.0"
gunicorn = "^21.2.0"
uvicorn = "^0.23.0"

[tool.poetry.dev-dependencies]
coverage = { version = "^7.0", extras = ["toml"] }
black = "^23.11"
isort = { version = "^5.12", extras = ["pyproject"] }
requests = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.black]
# https://github.com/psf/black
line-length = 88
target_version = ['py311']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 88
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0

[tool.coverage]
# https://github.com/nedbat/coveragepy
[tool.coverage.run]

source = ["src"]
branch = true
omit = ['']

[tool.coverage.report]
exclude_lines = ["# noqa", "raise NotImplementedError"]
